[package]
name = "aurora-queue"
version = "0.1.0"
authors = ["Carlos Eduardo Melo <ceduardo.melo@redime.com.br>"]
edition = "2018"
license-file = "LICENSE"

[features]
default = ["format-bincode", "compression-snappy"]
format-bincode = ["bincode"]
format-json = ["serde_json"]
compression-snappy = ["snap"]
compression-lz4 = ["lz4"]

[dependencies]
blocking = "^0.3"
bytes = "^0.5"
byteorder = "^1.3"
chrono = "^0.4"
errno = "^0.2"
futures = "^0.3"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
thiserror = "^1.0"
tokio = { version = "^0.2", features = ["full"] }

# Optional dependencies used by features
bincode = { version = "^1.2", optional = true }
serde_json = { version = "^1.0", optional = true }
snap = { version = "^1.0", optional = true }
lz4 = { version = "^1.23", optional = true }
ring = { version = "0.17.0-alpha.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[target.'cfg(windows)'.dependencies]
winapi = "^0.3"
ws2_32-sys = "^0.2"

[dev-dependencies]
criterion = "^0.3"
tempfile = "^3.1"

[[bench]]
name = "single_threaded"
harness = false