[package]
name = "aurora-channel"
version = "0.2.0"
authors = ["Carlos Eduardo Melo <ceduardo.melo@redime.com.br>"]
edition = "2018"
license-file = "LICENSE"

[features]
default = ["format-bincode", "compression-snappy"]
format-bincode = ["bincode"]
format-json = ["serde_json"]
compression-snappy = ["snap"]
compression-lz4 = ["lz4"]

[dependencies]
bytes = "^0.5"
byteorder = "^1.3"
chrono = "^0.4"
errno = "^0.2"
log = "^0.4"
futures = "^0.3"
memmap = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
thiserror = "^1.0"
tokio = { version = "^0.2", features = ["full"] }

## Optional dependencies used by features
bincode = { version = "^1.2", optional = true }
serde_json = { version = "^1.0", optional = true }
snap = { version = "^1.0", optional = true }
lz4 = { version = "^1.23", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[dev-dependencies]
tokio = { version = "^0.2", features = ["full"] }
criterion = "^0.3"
tempfile = "^3.1"
nix = "^0.17"

[[bench]]
name = "single_threaded"
harness = false
